Somewhat aligned columns, made corrections to data

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,12 +133,17 @@ tr {
 }
 
 th, td {
-	font-size: 1em;
-	padding: 0.6em;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
 
 td {
-	max-width: 10%;
+	width: 300px;
+	text-align: center;
 }
 
 .more-info {
